--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "oldtimerza's blog",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A blog about a software developer interested in all things modern web.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
+  "author": "Bradley Morris <bradleymorrisza@gmail.com>",
   "dependencies": {
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.22",
