fixing minor issues with deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oldtimerza's blog",
+  "name": "oldtimerzas-blog",
   "private": true,
   "description": "A blog about a software developer interested in all things modern web.",
   "version": "0.1.0",
