--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/oldtimerza/oldtimerza.github.io.git"
   },
   "scripts": {
     "dev": "gatsby develop",
